--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,69 @@
         android:theme="@style/Theme.Capstone_Kitchen"
         tools:targetApi="31">
         <activity
+            android:name=".Logout"
+            android:exported="false" />
+        <activity
+            android:name=".WelcomePage"
+            android:exported="false" />
+        <activity
+            android:name=".WalletPin"
+            android:exported="false" />
+        <activity
+            android:name=".WalletHistoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WalletDisplay"
+            android:exported="false" />
+        <activity
+            android:name=".VirtualWallet"
+            android:exported="false" />
+        <activity
+            android:name=".SignupPage"
+            android:exported="false" />
+        <activity
+            android:name=".SideNavigation"
+            android:exported="false" />
+        <activity
+            android:name=".ResetPasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OtpVerificationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OrderHistoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MenuPage"
+            android:exported="false" />
+        <activity
+            android:name=".LoginPage"
+            android:exported="false" />
+        <activity
+            android:name=".HomePage"
+            android:exported="false" />
+        <activity
+            android:name=".FeedbackSubmit"
+            android:exported="false" />
+        <activity
+            android:name=".Feedback"
+            android:exported="false" />
+        <activity
+            android:name=".Favorites"
+            android:exported="false" />
+        <activity
+            android:name=".EmptyCart"
+            android:exported="false" />
+        <activity
+            android:name=".Cart"
+            android:exported="false" />
+        <activity
+            android:name=".CreatePasswordActivity"
+            android:exported="false" />
+        <activity
             android:name=".Invoice"
             android:exported="false" />
         <activity
